--- a/css/style.css
+++ b/css/style.css
@@ -380,4 +380,35 @@ body.lock {
 }
 .individual-approach__btn:hover {
   background-color: rgba(255, 255, 255, 0.5);
+}
+
+.profitable-price {
+  max-width: 1860px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0px 20px;
+}
+.profitable-price__container {
+  padding: 151.07px 88px 130px;
+  border-radius: 12px;
+  background: url("../img/profitable-price_background.png") center/cover no-repeat rgba(211, 211, 211, 0.1);
+  background-blend-mode: screen;
+}
+.profitable-price__body {
+  display: flex;
+  flex-direction: row-reverse;
+}
+.profitable-price__content {
+  max-width: 700px;
+  width: 100%;
+}
+.profitable-price__title {
+  font-size: 34px;
+  font-weight: 700;
+  line-height: 29px;
+  margin-bottom: 45px;
+}
+.profitable-price__text {
+  font-size: 28px;
+  line-height: 29px;
 }/*# sourceMappingURL=style.css.map */
