--- a/css/style.css
+++ b/css/style.css
@@ -411,4 +411,34 @@ body.lock {
 .profitable-price__text {
   font-size: 28px;
   line-height: 29px;
+}
+
+.video__container {
+  position: relative;
+  max-width: 1103px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 48px 0px;
+}
+.video__btn {
+  position: relative;
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+}
+.video__btn img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+footer .footer-container {
+  text-align: center;
+  padding: 60.85px 20px 43.45px;
+}
+footer .footer-container img {
+  max-width: 413px;
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
