--- a/scss/style.scss
+++ b/scss/style.scss
@@ -418,3 +418,56 @@ body {
 }
 
 //</PROFITABLE-PRICE>=========================================================================================================
+//<VIDEO>=====================================================================================================================
+
+.video {
+
+	&__container {
+		position: relative;
+		max-width: 1103px;
+		width: 100%;
+		margin: 0 auto;
+		padding: 48px 0px;
+	}
+
+	&__content {
+		// position: absolute;
+		// width: 100%;
+		// height: 100%;
+		// top: 0;
+		// left: 0;
+	}
+
+	&__btn {
+		position: relative;
+		width: 250px;
+		height: 250px;
+		border-radius: 50%;
+
+		img {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+		}
+	}
+}
+
+//</VIDEO>====================================================================================================================
+
+//<FOOTER>=========================================================================================================================
+
+footer {
+	.footer-container {
+		text-align: center;
+		padding: 60.85px 20px 43.45px;
+
+		img {
+			max-width: 413px;
+			width: 100%;
+		}
+	}
+}
+
+//</FOOTER>=========================================================================================================================
