--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,22 @@ body.lock {
   overflow: hidden;
 }
 
+:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+
+:focus::-moz-placeholder {
+  color: transparent;
+}
+
+:focus:-moz-placeholder {
+  color: transparent;
+}
+
+:focus:-ms-input-placeholder {
+  color: transparent;
+}
+
 .container {
   max-width: 1140px;
   margin: 0 auto;
@@ -155,11 +171,6 @@ body.lock {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-@media (max-width: 1152px) {
-  .mainblock .container .header {
-    padding-bottom: 556.65px;
-  }
 }
 .mainblock__btn {
   display: flex;
@@ -328,12 +339,14 @@ body.lock {
   font-weight: 700;
   line-height: 29px;
   margin: 0px 0px 40px;
+  padding: 0px 23px;
 }
 .quality-assurance__text {
   margin: 0 auto;
   max-width: 1500px;
   font-size: 28px;
   line-height: 29px;
+  padding: 0px 23px;
 }
 
 .individual-approach {
@@ -415,23 +428,118 @@ body.lock {
 
 .video__container {
   position: relative;
-  max-width: 1103px;
+  max-width: 1143px;
   width: 100%;
   margin: 0 auto;
-  padding: 48px 0px;
+  padding: 48px 20px;
 }
-.video__btn {
-  position: relative;
-  width: 250px;
-  height: 250px;
-  border-radius: 50%;
+.video__container iframe {
+  border-radius: 12px;
 }
-.video__btn img {
-  position: absolute;
+
+.contacts {
+  max-width: 1860px;
   width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+  margin: 0 auto;
+  padding: 0px 20px;
+}
+.contacts__container {
+  padding: 67.5px 0px 75.3px;
+  border-radius: 12px;
+  background: rgba(25, 22, 28, 0.8);
+  backdrop-filter: blur(5px);
+}
+.contacts__body {
+  padding: 0px 20px;
+}
+.contacts__title {
+  text-align: center;
+  font-size: 34px;
+  font-weight: 700;
+  line-height: 29px;
+  margin-bottom: 41.66px;
+}
+.contacts__content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 975px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.contacts-title__gradient {
+  color: rgba(248, 228, 190, 0.8);
+}
+
+.contacts-content {
+  position: relative;
+}
+.contacts-content__info {
+  flex: 0 1 50%;
+  max-width: 400px;
+}
+.contacts-content__form {
+  flex: 0 1 50%;
+  max-width: 490px;
+}
+.contacts-content .coffee-left {
+  position: absolute;
+  top: -175px;
+  left: -220px;
+}
+.contacts-content .coffee-right {
+  position: absolute;
+  top: 255px;
+  right: -120px;
+}
+
+.info-title {
+  font-size: 34px;
+  font-weight: 700;
+  line-height: 42px;
+  margin-bottom: 20px;
+}
+
+.info-text {
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 29px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+.form input {
+  padding: 20px 0px;
+  margin-bottom: 31px;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 16px;
+  text-transform: uppercase;
+  border-radius: 12px;
+  border: 1.269px solid rgba(255, 255, 255, 0.1);
+  background: #19161C;
+  transition: all 0.5s ease 0s;
+}
+.form input:focus {
+  border: 1.269px solid rgb(255, 255, 255);
+}
+
+input.form-submit {
+  margin-bottom: 0px;
+  color: #FFF;
+  text-transform: uppercase;
+  border-radius: 12px;
+  border: 1.269px solid #FFF;
+  cursor: pointer;
+  transition: all 0.5s ease 0s;
+}
+input.form-submit:hover {
+  background: #443d4b;
 }
 
 footer .footer-container {
@@ -441,4 +549,40 @@ footer .footer-container {
 footer .footer-container img {
   max-width: 413px;
   width: 100%;
+}
+
+@media (max-width: 1152px) {
+  .mainblock .container .header {
+    padding-bottom: 556.65px;
+  }
+  .mainblock .container .header__navigation {
+    max-width: 325px;
+  }
+  .coffee-items {
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 40px;
+  }
+}
+@media (max-width: 991.98px) {
+  .coffee-items {
+    grid-template-columns: repeat(1, 1fr);
+    row-gap: 33px;
+  }
+}
+@media (max-width: 600px) {
+  .mainblock .container .header {
+    padding-top: 40px;
+    padding-bottom: 380px;
+    justify-content: center;
+  }
+  .mainblock .container .header__navigation {
+    display: none;
+  }
+  .quality-assurance__container {
+    padding: 50px 0px 314px;
+  }
+  .quality-assurance__text {
+    font-size: 17px;
+    line-height: 17px;
+  }
 }/*# sourceMappingURL=style.css.map */
