--- a/css/style.css
+++ b/css/style.css
@@ -562,11 +562,20 @@ footer .footer-container img {
     grid-template-columns: repeat(2, 1fr);
     row-gap: 40px;
   }
+  .coffee-items :nth-child(3) {
+    grid-column: 1/3;
+  }
+  .individual-approach__container {
+    padding: 112.72px 28px;
+  }
 }
-@media (max-width: 991.98px) {
+@media (max-width: 767.98px) {
   .coffee-items {
     grid-template-columns: repeat(1, 1fr);
-    row-gap: 33px;
+    row-gap: 32px;
+  }
+  .coffee-items :nth-child(3) {
+    grid-column: 1/1;
   }
 }
 @media (max-width: 600px) {
@@ -578,11 +587,65 @@ footer .footer-container img {
   .mainblock .container .header__navigation {
     display: none;
   }
+  .coffee-items {
+    padding: 33px 0px;
+  }
+  .coffee-item__body {
+    padding: 33px 18.6px 19.5px;
+  }
+  .coffee-item__title {
+    font-size: 15px;
+    line-height: 17.5px;
+  }
+  .coffee-item__subtitle {
+    font-size: 11px;
+    line-height: 17.5px;
+  }
+  .coffee-item__text {
+    font-size: 10px;
+    line-height: 17.5px;
+  }
+  .coffee-item__btn {
+    font-size: 10px;
+    line-height: 10px;
+  }
   .quality-assurance__container {
     padding: 50px 0px 314px;
   }
   .quality-assurance__text {
     font-size: 17px;
     line-height: 17px;
+  }
+  .individual-approach__container {
+    padding: 60px 28px;
+    text-align: center;
+  }
+  .individual-approach__title {
+    font-size: 28px;
+    line-height: 28px;
+    margin: 0px 0px 22px 0px;
+  }
+  .individual-approach__text {
+    font-size: 17px;
+    line-height: 17px;
+    margin: 0px 0px 22px 0px;
+  }
+  .profitable-price__container {
+    padding: 71px 40px;
+  }
+  .profitable-price__title {
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 28px;
+    margin-bottom: 20px;
+  }
+  .profitable-price__text {
+    font-size: 17px;
+    line-height: 17px;
+  }
+}
+@media (max-width: 479.98px) {
+  .individual-approach__title {
+    font-size: 22px;
   }
 }/*# sourceMappingURL=style.css.map */
