--- a/scss/style.scss
+++ b/scss/style.scss
@@ -611,13 +611,27 @@ footer {
 	.coffee-items {
 		grid-template-columns: repeat(2, 1fr);
 		row-gap: 40px;
+
+		& :nth-child(3) {
+			grid-column: 1/3;
+		}
+	}
+
+	.individual-approach {
+		&__container {
+			padding: 112.72px 28px;
+		}
 	}
 }
 
-@media (max-width: $md2+px) {
+@media (max-width: $md3+px) {
 	.coffee-items {
 		grid-template-columns: repeat(1, 1fr);
-		row-gap: 33px;
+		row-gap: 32px;
+
+		& :nth-child(3) {
+			grid-column: 1/1;
+		}
 	}
 }
 
@@ -636,6 +650,37 @@ footer {
 		}
 	}
 
+	.coffee-items {
+		padding: 33px 0px;
+	}
+
+	.coffee-item {
+
+		&__body {
+			padding: 33px 18.6px 19.5px;
+		}
+
+		&__title {
+			font-size: 15px;
+			line-height: 17.5px;
+		}
+
+		&__subtitle {
+			font-size: 11px;
+			line-height: 17.5px;
+		}
+
+		&__text {
+			font-size: 10px;
+			line-height: 17.5px;
+		}
+
+		&__btn {
+			font-size: 10px;
+			line-height: 10px;
+		}
+	}
+
 	.quality-assurance {
 		&__container {
 			padding: 50px 0px 314px;
@@ -644,6 +689,51 @@ footer {
 		&__text {
 			font-size: 17px;
 			line-height: 17px;
+		}
+	}
+
+	.individual-approach {
+		&__container {
+			padding: 60px 28px;
+			text-align: center;
+		}
+
+		&__title {
+			font-size: 28px;
+			line-height: 28px;
+			margin: 0px 0px 22px 0px;
+		}
+
+		&__text {
+			font-size: 17px;
+			line-height: 17px;
+			margin: 0px 0px 22px 0px;
+		}
+	}
+
+	.profitable-price {
+		&__container {
+			padding: 71px 40px;
+		}
+
+		&__title {
+			font-size:28px;
+			font-weight: 700;
+			line-height: 28px;
+			margin-bottom: 20px;
+		}
+
+		&__text {
+			font-size: 17px;
+			line-height: 17px;
+		}
+	}
+}
+
+@media (max-width: $md4+px) {
+	.individual-approach {
+		&__title {
+			font-size: 22px;
 		}
 	}
 }
