--- a/css/style.css
+++ b/css/style.css
@@ -165,12 +165,17 @@ body.lock {
   font-weight: 400;
   line-height: 27px;
   color: #ffffff;
+  transition: all 0.5s ease 0s;
+  border-bottom: 1px solid rgba(255, 0, 0, 0);
 }
 .mainblock .container .header__menu li a .gradient-text {
   background: radial-gradient(343.88% 97.53% at 50% 50%, #BF8836 0%, #F2DE8A 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+.mainblock .container .header__menu li a:hover {
+  border-bottom: 1px solid #BF8836;
 }
 .mainblock__btn {
   display: flex;
@@ -190,6 +195,10 @@ body.lock {
   font-weight: 700;
   line-height: 20px;
   text-transform: uppercase;
+  transition: all 0.5s ease 0s;
+}
+.mainblock__btn .mainblock-btn:hover {
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .coffee-shop {
@@ -453,10 +462,12 @@ body.lock {
   padding: 0px 20px;
 }
 .contacts__title {
+  position: relative;
+  z-index: 5;
   text-align: center;
   font-size: 34px;
   font-weight: 700;
-  line-height: 29px;
+  line-height: 37px;
   margin-bottom: 41.66px;
 }
 .contacts__content {
@@ -478,6 +489,7 @@ body.lock {
 .contacts-content__info {
   flex: 0 1 50%;
   max-width: 400px;
+  margin-right: 20px;
 }
 .contacts-content__form {
   flex: 0 1 50%;
@@ -495,6 +507,8 @@ body.lock {
 }
 
 .info-title {
+  position: relative;
+  z-index: 5;
   font-size: 34px;
   font-weight: 700;
   line-height: 42px;
@@ -502,12 +516,16 @@ body.lock {
 }
 
 .info-text {
+  position: relative;
+  z-index: 5;
   font-size: 28px;
   font-weight: 400;
   line-height: 29px;
 }
 
 .form {
+  position: relative;
+  z-index: 5;
   display: flex;
   flex-direction: column;
 }
@@ -537,6 +555,7 @@ input.form-submit {
   border: 1.269px solid #FFF;
   cursor: pointer;
   transition: all 0.5s ease 0s;
+  background: rgba(68, 61, 75, 0);
 }
 input.form-submit:hover {
   background: #443d4b;
@@ -565,8 +584,28 @@ footer .footer-container img {
   .coffee-items :nth-child(3) {
     grid-column: 1/3;
   }
+  .contacts-content .coffee-left {
+    top: -175px;
+    left: -120px;
+    z-index: 0;
+  }
+  .contacts-content .coffee-right {
+    top: 235px;
+    right: -60px;
+    z-index: 0;
+  }
   .individual-approach__container {
     padding: 112.72px 28px;
+  }
+}
+@media (max-width: 991.98px) {
+  .info-title {
+    font-size: 25px;
+    line-height: 30px;
+  }
+  .info-text {
+    font-size: 20px;
+    line-height: 25px;
   }
 }
 @media (max-width: 767.98px) {
@@ -645,6 +684,45 @@ footer .footer-container img {
   }
   .video__container iframe {
     height: 520px;
+  }
+  .contacts__container {
+    padding: 33px 0px 27px;
+  }
+  .contacts__body {
+    padding: 0px 10px;
+  }
+  .contacts__title {
+    font-size: 28px;
+    line-height: 28px;
+    margin-bottom: 37px;
+  }
+  .contacts__content {
+    flex-direction: column;
+  }
+  .contacts-content__info, .contacts-content__form {
+    width: 100%;
+    padding: 0px 15px;
+    margin-right: 0px;
+  }
+  .contacts-content .coffee-left {
+    display: none;
+  }
+  .contacts-content .coffee-right {
+    display: none;
+  }
+  .info-title {
+    font-size: 17px;
+    line-height: 17px;
+    text-align: center;
+  }
+  .info-text {
+    font-size: 17px;
+    line-height: 17px;
+    text-align: center;
+    margin-bottom: 33px;
+  }
+  input.form-submit {
+    font-size: 15px;
   }
 }
 @media (max-width: 479.98px) {
