convertion to webp

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -71,7 +71,7 @@ body {
 //<MAINBLOCK>====================================================================================================
 
 .mainblock {
-	background-image: url('../img/mainblock_background.png');
+	background-image: url('../img/mainblock_background.webp');
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -256,39 +256,39 @@ body {
 }
 
 .parrot-image {
-	background-image: url('../img/coffee_shop/coffee-shop_parrot.png');
+	background-image: url('../img/coffee_shop/coffee-shop_parrot.webp');
 }
 
 .rooster-image {
-	background-image: url('../img/coffee_shop/coffee-shop_rooster.png');
+	background-image: url('../img/coffee_shop/coffee-shop_rooster.webp');
 }
 
 .flamingo-image {
-	background-image: url('../img/coffee_shop/coffee-shop_flamingo.png');
+	background-image: url('../img/coffee_shop/coffee-shop_flamingo.webp');
 }
 
 .parrot-image1 {
-	background-image: url('../img/coffee_shop/coffee-shop_parrot1.png');
+	background-image: url('../img/coffee_shop/coffee-shop_parrot1.webp');
 }
 
 .rooster-image1 {
-	background-image: url('../img/coffee_shop/coffee-shop_rooster1.png');
+	background-image: url('../img/coffee_shop/coffee-shop_rooster1.webp');
 }
 
 .flamingo-image1 {
-	background-image: url('../img/coffee_shop/coffee-shop_flamingo1.png');
+	background-image: url('../img/coffee_shop/coffee-shop_flamingo1.webp');
 }
 
 .parrot-image2 {
-	background-image: url('../img/coffee_shop/coffee-shop_parrot2.png');
+	background-image: url('../img/coffee_shop/coffee-shop_parrot2.webp');
 }
 
 .rooster-image2 {
-	background-image: url('../img/coffee_shop/coffee-shop_rooster2.png');
+	background-image: url('../img/coffee_shop/coffee-shop_rooster2.webp');
 }
 
 .flamingo-image2 {
-	background-image: url('../img/coffee_shop/coffee-shop_flamingo2.png');
+	background-image: url('../img/coffee_shop/coffee-shop_flamingo2.webp');
 }
 
 .parrot-image,
@@ -320,7 +320,7 @@ body {
 		text-align: center;
 
 		border-radius: 12px;
-		background: url('../img/quality-assurance_background.png') center / cover no-repeat rgba(211, 211, 211, 0.1);
+		background: url('../img/quality-assurance_background.webp') center / cover no-repeat rgba(211, 211, 211, 0.1);
 		background-blend-mode: screen;
 	}
 
@@ -356,7 +356,7 @@ body {
 		text-align: left;
 
 		border-radius: 12px;
-		background: url('../img/individual-approach_background.png') center / cover no-repeat rgba(211, 211, 211, 0.1);
+		background: url('../img/individual-approach_background.webp') center / cover no-repeat rgba(211, 211, 211, 0.1);
 		background-blend-mode: screen;
 	}
 
@@ -414,7 +414,7 @@ body {
 		padding: 151.07px 88px 130px;
 
 		border-radius: 12px;
-		background: url('../img/profitable-price_background.png') center / cover no-repeat rgba(211, 211, 211, 0.1);
+		background: url('../img/profitable-price_background.webp') center / cover no-repeat rgba(211, 211, 211, 0.1);
 		background-blend-mode: screen;
 	}
 
