--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,7 @@ body.lock {
   border: 1.243px solid rgb(255, 255, 255);
   padding: 12px 0px;
   margin-bottom: 17.38px;
+  height: 57px;
   text-align: center;
   font-size: 15.672px;
   line-height: 15.672px;
