--- a/css/style.css
+++ b/css/style.css
@@ -646,6 +646,7 @@ footer .footer-container img {
     line-height: 17.5px;
   }
   .coffee-item__btn {
+    height: 37px;
     font-size: 10px;
     line-height: 10px;
   }
